Exercise 2.01: Connecting pods
Connect the "Log output" application and "Ping-pong" application.
Instead of sharing data via files use HTTP endpoints to respond
with the number of pongs.

--- a/project/apps/project/script_templates/index.html
+++ b/project/apps/project/script_templates/index.html
@@ -17,7 +17,7 @@
         <li>Write some code</li>
     </ul>
     <h2>Embedded Image</h2>
-    <img src="{{.randomPictureFileMountPath}}/{{.randomPictureFileName}}" alt="Embedded Image">
+    <img src="{{.sharedVolumeMountPath}}/{{.randomPictureFileName}}" alt="Embedded Image">
     <script>
         document.getElementById('sendButton').addEventListener('click', function () {
             const input = document.getElementById('todoInput');
